cron job to query node using json rpc

--- a/backend/config.cfg
+++ b/backend/config.cfg
@@ -1,7 +1,14 @@
 {
     "aerospike": {
         "address": "172.28.128.3",
-        "port": "3000",
+        "port": 3000,
         "namespace": "test"
+    },
+    "node": {
+        "address": "ec2-52-53-220-31.us-west-1.compute.amazonaws.com",
+        "port": 16888
+    },
+    "log": {
+        "level": "debug"
     }
 }
