--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aerospike": "^3.2.0",
     "bluebird": "^3.5.1",
+    "express": "^4.16.2",
     "node-schedule": "^1.3.0"
   }
 }
