--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
   "author": "krithix",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.1",
     "css-loader": "^0.26.1",
@@ -26,6 +28,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^3.0.2",
+    "raven-for-redux": "^1.3.1",
+    "raven-js": "^3.25.2",
     "sass-loader": "^5.0.1",
     "socket.io": "^2.0.4",
     "style-loader": "^0.13.1",
@@ -33,5 +37,21 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^2.3.0",
     "webpack-hot-middleware": "^2.16.1"
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "es2015"
+    ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./src/**"
+          ]
+        }
+      ]
+    ]
   }
 }
