--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -8,7 +8,8 @@
     "bluebird": "^3.5.1",
     "express": "^4.16.3",
     "socketio": "^1.0.0",
-    "body-parser": "^1.18.3"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4"
   },
   "devDependencies": {},
   "scripts": {
