--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,19 +17,22 @@
     "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.1",
+    "bootstrap": "^4.1.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "node-sass": "^4.5.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router": "^3.0.2",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.25.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router": "^3.0.2",
+    "reactstrap": "^6.0.1",
     "sass-loader": "^5.0.1",
     "socket.io": "^2.0.4",
     "style-loader": "^0.13.1",
