Fix global variable bug

--- a/backend/explorer-api/config.cfg
+++ b/backend/explorer-api/config.cfg
@@ -9,5 +9,8 @@
     },
     "blockchain": {
         "network_id": "test_chain_id"
+    },
+    "transaction": {
+        "network_id": "test_chain_id_txs"
     }
 }
