--- a/backend/explorer-api/config.cfg
+++ b/backend/explorer-api/config.cfg
@@ -12,5 +12,9 @@
     },
     "transaction": {
         "network_id": "test_chain_id_txs"
+    },
+    "cert":{
+        "key": "cert/star_thetatoken_org.key",
+        "crt": "cert/star_thetatoken_org.crt"
     }
 }
