--- a/backend/explorer-api/config.cfg
+++ b/backend/explorer-api/config.cfg
@@ -1,6 +1,6 @@
 {
     "aerospike": {
-        "address": "ec2-52-53-243-120.us-west-1.compute.amazonaws.com",
+        "address": "ec2-18-191-243-162.us-east-2.compute.amazonaws.com",
         "port": 3000,
         "namespace": "test"
     },
