--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "bignumber.js": "^8.0.1",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
