Change to mongoDB and implement part of dao code

--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -12,6 +12,7 @@
     "aerospike": "^3.2.0",
     "bluebird": "^3.5.1",
     "express": "^4.16.2",
+    "mongodb": "^3.1.10",
     "node-schedule": "^1.3.0"
   }
 }
