--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "aerospike": "^3.2.0",
     "bluebird": "^3.5.1",
-    "express": "^4.16.3",
-    "socketio": "^1.0.0",
     "body-parser": "^1.18.3",
-    "cors": "^2.8.4"
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.11",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
