--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "theta explorer",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --inline",
+    "dev": "export PORT=4000 && node server.js",
     "start": "node server.js"
   },
   "main": "server.js",
