--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
     "bignumber.js": "^8.0.1",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "node-sass": "^4.9.0",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.3",
@@ -36,25 +30,25 @@
     "sass-loader": "^5.0.1",
     "socket.io": "^2.1.1",
     "style-loader": "^0.13.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-dev-server": "^3.1.11",
-    "webpack-hot-middleware": "^2.22.2"
+    "webpack": "^4.29.5",
+    "webpack-dev-middleware": "^3.6.0",
+    "webpack-dev-server": "^3.2.0",
+    "webpack-hot-middleware": "^2.24.3"
   },
-  "babel": {
-    "presets": [
-      "react",
-      "es2015"
-    ],
-    "plugins": [
-      [
-        "module-resolver",
-        {
-          "root": [
-            "./src/**"
-          ]
-        }
-      ]
-    ]
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "browser-sync": "^2.26.3",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^4.0.2",
+    "webpack-cli": "^3.2.3",
+    "webpack-stream": "^5.2.1"
   }
 }
