--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.9.0",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.3",
