--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.0.2",
     "webpack-cli": "^3.2.3",
     "webpack-stream": "^5.2.1"
