Crawler related fixes
1. Add more crawler verbose logs for debugging
2. Print logs into a separate file
3. Increase the memory limit in Node.js
4. Add a custom logger with timestamp and type

--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -4,7 +4,7 @@
   "description": "blockchain explorer for theta token",
   "main": "run.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --max-old-space-size=4096 run.js | tee -a /home/ubuntu/logs/crawler.log"
   },
   "author": "",
   "license": "ISC",
