--- a/backend/explorer-api/config_template.cfg
+++ b/backend/explorer-api/config_template.cfg
@@ -25,5 +25,10 @@
     "cert":{
         "key": "",
         "crt": ""
+    },
+    "coinmarketcap":{
+        "key": "",
+        "theta_id": 2416,
+        "tfuel_id": 3822
     }
 }
