--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^8.0.1",
     "bluebird": "^3.5.1",
     "express": "^4.16.2",
     "mongodb": "^3.1.10",
