moved wallet addrs to config

--- a/backend/crawler/config_template.cfg
+++ b/backend/crawler/config_template.cfg
@@ -19,7 +19,11 @@
     "blockchain": {
         "network_id": ""
     },
-    "coinbase": {
-        "api_key": ""
+    "accounting": {
+        "coinbase_api_key": "",
+        "wallet_addresses": [
+            "",
+            ""
+        ]
     }
 }
