--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.4.2",
     "react-json-view": "^1.19.1",
     "react-router": "^3.0.2",
+    "react-tabs": "^3.1.1",
     "reactstrap": "^6.2.0",
     "sass-loader": "^5.0.1",
     "socket.io": "^2.1.1",
