Update config template

--- a/backend/explorer-api/config_template.cfg
+++ b/backend/explorer-api/config_template.cfg
@@ -1,34 +1,31 @@
 {
-    "aerospike": {
-        "address": "",
-        "port": 3000,
-        "namespace": ""
-    },
     "mongo": {
-        "address": "",
+        "address": "localhost",
         "port": 27017,
-        "dbName": ""
+        "dbName": "test"
     },
     "node": {
-        "address": "",
+        "address": "localhost",
         "port": 16888
     },
     "log": {
-        "level": ""
+        "level": "debug"
     },
     "server": {
         "port": 9000
     },
     "blockchain": {
-        "network_id": ""
+        "network_id": "test_chain"
     },
+    "accounting": {
+        "coinmarketcap_api_key": "COINMARKETCAP_API_KEY",
+        "wallet_addresses": [
+            "2416",
+            "3822"
+        ]
+    }
     "cert":{
         "key": "",
         "crt": ""
-    },
-    "coinmarketcap":{
-        "key": "",
-        "theta_id": 2416,
-        "tfuel_id": 3822
     }
 }
