Update start height setting

--- a/backend/crawler/config_template.cfg
+++ b/backend/crawler/config_template.cfg
@@ -12,7 +12,8 @@
         "level": "debug"
     },
     "blockchain": {
-        "network_id": "test_chain"
+        "network_id": "test_chain",
+        "start_height": 1
     },
     "accounting": {
         "coinmarketcap_api_key": "COINMARKETCAP_API_KEY",
