--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "run.js",
   "dependencies": {
-    "bluebird": "^3.5.1",
     "bignumber.js": "^8.0.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.1.13",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "solc": "^0.7.1"
   },
   "devDependencies": {},
   "scripts": {
