--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
+    "history": "^5.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.9.0",
     "raven-for-redux": "^1.3.1",
@@ -28,7 +29,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.19.1",
-    "react-router": "^3.0.2",
+    "react-router-dom": "^5.2.0",
     "react-tabs": "^3.1.1",
     "reactjs-popup": "^1.5.0",
     "reactstrap": "^6.2.0",
