--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "author": "krithix",
   "license": "ISC",
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "axios": "^0.18.0",
     "bignumber.js": "^8.0.1",
     "body-parser": "^1.18.3",
@@ -27,6 +28,7 @@
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.3",
     "react": "^16.13.1",
+    "react-ace": "^9.1.4",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.19.1",
     "react-router-dom": "^5.2.0",
