Compress api data and fix browserslist

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,5 +61,17 @@
     "gulp-sass": "^4.0.2",
     "webpack-cli": "^3.2.3",
     "webpack-stream": "^5.2.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
