--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -7,6 +7,7 @@
     "bignumber.js": "^8.0.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.1.13",
