--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -14,7 +14,8 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
     "socketio": "^1.0.0",
-    "solc": "^0.7.1"
+    "solc": "^0.7.1",
+    "spdy": "^4.0.2"
   },
   "devDependencies": {},
   "scripts": {
