--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bignumber.js": "^8.0.1",
     "bluebird": "^3.5.1",
-    "express": "^4.16.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mongodb": "^3.1.13",
     "node-schedule": "^1.3.0",
     "request": "^2.88.0",
