--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "mongodb": "^3.1.13",
     "node-schedule": "^1.3.0",
+    "node-schedule-tz": "^1.2.1-4",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   }
