--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
+    "ethers": "^5.0.23",
     "express": "^4.14.1",
     "history": "^4.10.1",
     "moment": "^2.24.0",
