--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
+    "eth-lib": "^0.1.29",
     "ethers": "^5.0.23",
     "express": "^4.14.1",
     "history": "^4.10.1",
@@ -39,7 +40,6 @@
     "sass-loader": "^5.0.1",
     "socket.io": "^2.1.1",
     "style-loader": "^0.13.1",
-    "web3": "^1.3.0",
     "webpack": "^4.29.5",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.11.0",
