--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "ace-builds": "^1.4.12",
-    "axios": "^0.18.1",
+    "axios": "^0.21.1",
     "bignumber.js": "^8.0.1",
     "body-parser": "^1.18.3",
     "chart.js": "^2.9.3",
@@ -26,6 +26,7 @@
     "express": "^4.14.1",
     "history": "^4.10.1",
     "moment": "^2.24.0",
+    "multiselect-react-dropdown": "^1.6.3",
     "node-sass": "^4.14.1",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.3",
