--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.5.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ioredis": "^4.22.0",
     "mongodb": "^3.1.13",
     "node-schedule": "^1.3.0",
     "node-schedule-tz": "^1.2.1-4",
