Update redis config

--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -22,7 +22,12 @@
             "3822"
         ]
     },
-    "redis" : {
+    "redis": {
         "enabled": false, 
+        "host": "127.0.0.1",
+        "port": 6379,
+        "password": "",
+        "family": 4,
+        "db": 0
     }
 }
