--- a/backend/explorer-api/config.cfg.template
+++ b/backend/explorer-api/config.cfg.template
@@ -29,6 +29,11 @@
         "crt": ""
     },
     "redis": {
-        "enabled": false
+        "enabled": true,
+        "host": "127.0.0.1",
+        "port": 6379,
+        "password": "",
+        "family": 4,
+        "db": 0
     }
 }
