--- a/backend/explorer-api/config.cfg.template
+++ b/backend/explorer-api/config.cfg.template
@@ -27,7 +27,7 @@
         "crt": ""
     },
     "redis": {
-        "enabled": true,
+        "enabled": false,
         "host": "127.0.0.1",
         "port": 6379,
         "password": "",
