--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -24,6 +24,7 @@
     },
     "redis": {
         "enabled": false, 
+        "isCluster": false,
         "host": "127.0.0.1",
         "port": 6379,
         "password": "",
