--- a/backend/explorer-api/config.cfg.template
+++ b/backend/explorer-api/config.cfg.template
@@ -28,6 +28,7 @@
     },
     "redis": {
         "enabled": false,
+        "isCluster": false,
         "host": "127.0.0.1",
         "port": 6379,
         "password": "",
