--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.4",
+    "eth-lib": "^0.1.29",
     "ethers": "^5.4.7",
     "express": "^4.16.3",
     "ioredis": "^4.22.0",
