--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bignumber.js": "^8.0.1",
     "bluebird": "^3.5.1",
     "cors": "^2.8.5",
+    "eth-lib": "^0.1.29",
     "ethers": "^5.4.7",
     "express": "^4.17.1",
     "ioredis": "^4.22.0",
