Read chainId from config file

--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -35,5 +35,6 @@
     "nodeCache": {
         "enabled": false
     },
-    "maxBlockPerCrawl": 2
+    "maxBlockPerCrawl": 2,
+    "defaultThetaChainID": "testnet"
 }
