Retrieve existing token info

--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -36,5 +36,5 @@
         "enabled": false
     },
     "maxBlockPerCrawl": 2,
-    "defaultThetaChainID": "testnet"
+    "retrieveTokenStartHeight": 0
 }
