Update existing smart contract info

--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -36,5 +36,6 @@
         "enabled": false
     },
     "maxBlockPerCrawl": 2,
-    "retrieveTokenStartHeight": 0
+    "retrieveTokenStartHeight": 0,
+    "defaultThetaChainID": "testnet"
 }
