--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,15 @@
     "axios": "^0.21.4",
     "bignumber.js": "^8.0.1",
     "body-parser": "^1.18.3",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.9.1",
+    "chartjs-adapter-moment": "^1.0.0",
     "classnames": "^2.2.6",
     "css-loader": "^0.26.1",
     "eth-lib": "^0.2.8",
     "ethers": "^5.5.4",
     "express": "^4.14.1",
     "history": "^4.10.1",
-    "moment": "^2.24.0",
+    "moment": "^2.29.4",
     "multiselect-react-dropdown": "^1.6.3",
     "node-sass": "^4.14.1",
     "raven-for-redux": "^1.3.1",
