--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -13,11 +13,12 @@
     "bignumber.js": "^8.0.1",
     "bluebird": "^3.5.1",
     "cors": "^2.8.5",
-    "eth-lib": "^0.1.29",
+    "eth-lib": "^0.2.8",
     "ethers": "^5.4.7",
     "express": "^4.17.1",
     "ioredis": "^4.22.0",
     "lodash": ">=4.17.21",
+    "moment": "^2.29.4",
     "mongodb": "^3.1.13",
     "node-schedule": "^1.3.0",
     "node-schedule-tz": "^1.2.1-4",
