Add sub stake dao related

--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -37,5 +37,6 @@
     },
     "maxBlockPerCrawl": 2,
     "retrieveTokenStartHeight": 0,
-    "defaultThetaChainID": "testnet"
+    "defaultThetaChainID": "testnet",
+    "chainType": "mainchain"
 }
