Get tdrop info from api

--- a/backend/explorer-api/config.cfg.template
+++ b/backend/explorer-api/config.cfg.template
@@ -22,7 +22,8 @@
     "coinmarketcap":{
         "key": "COINMARKETCAP_API_KEY",
         "thetaId": 2416,
-        "tfuelId": 3822
+        "tfuelId": 3822,
+        "tdropId": 17806
     },
     "cert":{
         "enabled": false,
