--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -35,6 +35,10 @@
     "nodeCache": {
         "enabled": false
     },
+    "contractAddressMap": {
+        "TNT20TokenBank": '0x7d7e270b7e279c94b265a535cdbc00eb62e6e68f',
+        "TNT721TokenBank": '0xd5125d7bB9c4Fb222C522c4b1922cabC631E52D7'
+    },
     "maxBlockPerCrawl": 2,
     "retrieveTokenStartHeight": 0,
     "defaultThetaChainID": "testnet",
