--- a/frontend/src/config.js.template
+++ b/frontend/src/config.js.template
@@ -32,6 +32,10 @@ const config = {
             socketApiPort: 2096
         }]
     },
+    contractAddresses: {
+        TNT20TokenBank: '0x7d7e270b7e279c94b265a535cdbc00eb62e6e68f',
+        TNT721TokenBank: '0xd5125d7bB9c4Fb222C522c4b1922cabC631E52D7'
+    },
     chainName: 'Theta Testnet Main Chain',
     chainType: ChainType.MAINCHAIN
 
