Add top holders api with api token

--- a/backend/explorer-api/config.cfg.template
+++ b/backend/explorer-api/config.cfg.template
@@ -39,5 +39,6 @@
         "family": 4,
         "db": 0
     },
-    "defaultThetaChainID": "testnet"
+    "defaultThetaChainID": "testnet",
+    "xApiToken": ""
 }
