--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react": "^16.13.1",
     "react-ace": "^9.1.4",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^14.2.3",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
     "react-tabs": "^3.1.1",
