Add theta rpc endpoints

--- a/backend/crawler/config.cfg.template
+++ b/backend/crawler/config.cfg.template
@@ -45,5 +45,5 @@
     "retrieveTokenStartHeight": 0,
     "defaultThetaChainID": "testnet",
     "chainType": "mainchain",
-    "ethRPCEndpoint": ""
+    "thetaRPCEndpoint": ""
 }
