--- a/backend/explorer-helper/package.json
+++ b/backend/explorer-helper/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "run.js",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
