--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-minify": "^3.1.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "history": "^4.10.1",
     "moment": "^2.29.4",
