--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,7 +66,9 @@
     "webpack-hot-middleware": "^2.25.2",
     "webpack-stream": "^5.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.2"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
