--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,9 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-hash": "^4.2.2",
     "gulp-minify": "^3.1.0",
-    "gulp-rename": "^2.0.0",
+    "gulp-rev-collector": "^1.3.3",
     "gulp-sass": "^4.0.2",
     "history": "^4.10.1",
     "html-webpack-plugin": "^4.5.2",
