--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,53 +14,53 @@
   "author": "krithix",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.22.11",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "ace-builds": "^1.4.12",
-    "axios": "^0.21.4",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "bignumber.js": "^8.1.1",
-    "body-parser": "^1.20.2",
-    "browser-sync": "^2.29.3",
+    "@babel/cli": "^7.26.0",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.26.5",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.0",
+    "ace-builds": "^1.36.0",
+    "axios": "^1.7.7",
+    "babel-loader": "^8.4.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "bignumber.js": "^9.2.1",
+    "body-parser": "^1.20.3",
+    "browser-sync": "^3.0.2",
     "chart.js": "^3.9.1",
-    "chartjs-adapter-moment": "^1.0.0",
-    "classnames": "^2.2.6",
-    "css-loader": "^0.26.1",
+    "chartjs-adapter-moment": "^1.0.1",
+    "classnames": "^2.5.1",
+    "css-loader": "^4.3.0",
     "eth-lib": "^0.2.8",
-    "ethers": "^5.5.4",
-    "express": "^4.18.2",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
+    "ethers": "^5.7.2",
+    "express": "^4.21.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-hash": "^4.2.2",
     "gulp-minify": "^3.1.0",
     "gulp-rev-collector": "^1.3.3",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "history": "^4.10.1",
     "html-webpack-plugin": "^4.5.2",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "multiselect-react-dropdown": "^1.6.3",
-    "node-sass": "^4.14.1",
     "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.3",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-ace": "^9.1.4",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^14.2.3",
+    "react-dom": "^16.14.0",
+    "react-dropzone": "^14.2.8",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
     "react-tabs": "^3.1.1",
     "reactjs-popup": "^1.5.0",
     "reactstrap": "^6.2.0",
-    "sass-loader": "^5.0.1",
-    "socket.io": "^2.4.1",
-    "style-loader": "^0.13.1",
+    "sass": "^1.79.4",
+    "sass-loader": "^10.5.2",
+    "socket.io": "^4.8.0",
+    "style-loader": "^1.3.0",
     "tns-resolver": "^2.0.4",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
@@ -69,7 +69,6 @@
     "webpack-hot-middleware": "^2.25.2",
     "webpack-stream": "^5.2.1"
   },
-  "devDependencies": {},
   "browserslist": {
     "production": [
       ">0.2%",
