--- a/backend/explorer-api/package.json
+++ b/backend/explorer-api/package.json
@@ -18,10 +18,9 @@
     "redis": "^3.0.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
-    "socketio": "^1.0.0",
+    "socket.io": "^4.4.1",
     "spdy": "^4.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
